--- a/scrip-trad/src/app/pages/listado-proyectos-gestor/listado-proyectos-gestor.page.html
+++ b/scrip-trad/src/app/pages/listado-proyectos-gestor/listado-proyectos-gestor.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-Aqui se muestra el historial de proyectos de ese gestor
+
 
 <!-- Creo un ion-list, cada mensaje será un ion-item -->
 <ion-list *ngIf="totalProyectos > 0" id="list">
@@ -16,7 +16,8 @@ Aqui se muestra el historial de proyectos de ese gestor
     <ion-label id="label">
       <ion-text>
         <ion-label>{{proyecto.titulo}}</ion-label>
-        <p>Info}</p>
+        <ion-label button (click) = mostrarInformacion()>Info</ion-label>
+        
       </ion-text>
   </ion-label>
   </ion-item>
