--- a/scrip-trad/src/app/pages/listado-proyectos-gestor/listado-proyectos-gestor.page.html
+++ b/scrip-trad/src/app/pages/listado-proyectos-gestor/listado-proyectos-gestor.page.html
@@ -14,17 +14,50 @@
   <ion-item *ngFor="let proyecto of proyectos" (click)="mostrarInformacion(proyecto)">
     <!-- Llamada al componente de imagen de usuario
     <app-imagen-usuario [idUsuario]="mensaje.remitente.id"></app-imagen-usuario>-->
-    
+    <ion-avatar slot="start">
+      <img src="{{ proyecto.traductor.img != null ? 'data:image/png;base64,' + proyecto.traductor.img : 'assets/img/genericUser.jpg'}}" alt="">
+    </ion-avatar>
     <ion-label id="label">
       <ion-text>
         <ion-label>{{proyecto.titulo}}</ion-label>
-        <ion-label>Info</ion-label>
+        <ion-label style="color: blue;">Info</ion-label>
         
       </ion-text>
   </ion-label>
-  <!-- Utilizo un pipe de tipo date para la fecha del mensaje -->
-  <ion-note id="note">{{proyecto.fechaEntrega | date:'dd MMM YYYY'}}</ion-note>
-  <ion-icon name="trash-outline"></ion-icon>
+  <div class="ion-text-center">
+      <!-- Utilizo un pipe de tipo date para la fecha del mensaje -->
+      <ion-note id="note" >{{proyecto.fechaEntrega | date:'dd MMM YYYY'}}</ion-note>
+      <ion-icon name="trash-outline" style="padding-left: 5px;"></ion-icon>
+  </div>
+  
   </ion-item>
 </ion-list>
+<!--<ion-button routerLink="/tabs" >Login</ion-button>-->
+
+
 </ion-content>
+<ion-footer>
+  <ion-toolbar >
+    <ion-tabs>
+  
+      <ion-tab-bar slot="bottom" class="ion-justify-content-between">
+        <ion-tab-button tab="listado-proyectos-gestor">
+          <ion-icon name="add-circle-outline"></ion-icon>
+        <!-- <ion-label>Tab 1</ion-label>--> 
+        </ion-tab-button>
+    
+        <ion-tab-button tab="tab2">
+          <ion-icon name="home-outline"></ion-icon>
+          
+        </ion-tab-button>
+    
+        <ion-tab-button tab="tab3">
+          <ion-icon name="menu-outline"></ion-icon>
+          
+        </ion-tab-button>
+      </ion-tab-bar>
+    
+    </ion-tabs>
+  </ion-toolbar>
+
+</ion-footer>
