--- a/scrip-trad/src/app/pages/listado-proyectos-gestor/listado-proyectos-gestor.page.html
+++ b/scrip-trad/src/app/pages/listado-proyectos-gestor/listado-proyectos-gestor.page.html
@@ -9,44 +9,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  
-  <ion-menu side="end" content-id="main-content">
-    <ion-header>
-      <ion-toolbar translucent>
-        <ion-title>Menu</ion-title>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content>
-      <ion-list>
-        <ion-item>
-          <ion-icon name="mail" slot="start"></ion-icon>
-          <ion-label>Inbox</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-icon name="paper-plane" slot="start"></ion-icon>
-          <ion-label>Outbox</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-icon name="heart" slot="start"></ion-icon>
-          <ion-label>Favorites</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-icon name="archive" slot="start"></ion-icon>
-          <ion-label>Archived</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-icon name="trash" slot="start"></ion-icon>
-          <ion-label>Trash</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-icon name="warning" slot="start"></ion-icon>
-          <ion-label>Spam</ion-label>
-        </ion-item>
-      </ion-list>
-    </ion-content>
-  </ion-menu>
-
-  <ion-badge slot="end" class="ion-margin-end">{{totalProyectos}}</ion-badge>
+<!-- <ion-badge slot="end" class="ion-margin-end">{{totalProyectos}}</ion-badge>-->
 <!-- Creo un ion-list, cada mensaje será un ion-item -->
 <ion-list *ngIf="totalProyectos > 0" id="list">
   <!-- Creo un ion-item por cada elemento del array "mensajes" //  (click)="detalleMensaje(mensaje)" class="{{mensaje.leido ? '' : 'noLeido'}}"-->
@@ -68,10 +31,8 @@
       <ion-note id="note" >{{proyecto.fechaEntrega | date:'dd MMM YYYY'}}</ion-note>
       <ion-icon name="trash-outline" style="padding-left: 5px;" (click)="eliminarProytecto(proyecto)"></ion-icon>
   </div>
-  
   </ion-item>
 </ion-list>
-
 <!-- Un ion-infinite-scroll simplemente vigila el momento en que llegamos hasta el final
   de la lista. Cuando se llega, se dispara un evento, se muestra un mensaje y una animación.
   El evento lanzado llama a un método para cargar más mensajes.-->
@@ -79,19 +40,18 @@
     <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Cargando proyectos...">
     </ion-infinite-scroll-content>
   </ion-infinite-scroll>
-
-
 </ion-content>
+
 <ion-footer>
   <ion-toolbar >
     <ion-tabs>
   
       <ion-tab-bar slot="bottom" class="ion-justify-content-around">
-        <ion-tab-button tab="listado-proyectos-gestor">
+        <ion-tab-button tab="listado-proyectos-gestor" (click)="crearNuevoProyecto();">
           <ion-icon name="add-circle-outline"></ion-icon>
         </ion-tab-button>
     
-        <ion-tab-button tab="tab2">
+        <ion-tab-button tab="tab2" (click)="irInicioGestor();">
           <ion-icon name="home-outline"></ion-icon>
         </ion-tab-button>
     <!--
