--- a/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.html
+++ b/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.html
@@ -1,12 +1,79 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>crearProyecto</ion-title>
+    <ion-title slot="start">Nuevo poyecto</ion-title>
+    <!--Imagen de usuario logueado-->
+    <ion-avatar slot="end" id="usu" button (click)="mostrarMenu()">
+      <img src="{{ usuarioAutenticado != null && usuarioAutenticado.img != null ? 'data:image/png;base64,' + usuarioAutenticado.img : 'assets/img/genericUser.jpg'}}" alt="Imagen usuario">
+    </ion-avatar>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-Aqui deberian aparecer los slides para crear un nuevo proyecto y asiganarlo
+  <ion-card-content>
+    <form [formGroup]="newProjectForm">
+      <!--Usaremos filas para ir organizando los inputs-->
+      <ion-row>
+        <ion-col size="12" class="ion-align-items-center">
+          <ion-badge>1</ion-badge>
+          <ion-label>Encargo</ion-label>
+        </ion-col>
+      <ion-col size="12">
+      <ion-item>
+        <ion-label position="floating">Nombre nuevo proyecto</ion-label>
+        <ion-input type="text" formControlName="nombreProyecto"></ion-input>
+        <ng-container *ngIf="newProjectForm.controls.nombreProyecto.errors != undefined">
+          <div class="errorEnValidacion" *ngIf="newProjectForm.controls.nombreProyecto.errors.required">Campo obligatorio
+          </div>
+        </ng-container>
+      </ion-item>
+      </ion-col>
+    </ion-row>
+
+    <!--Segunda fila combinacion idiomas -->
+    <ion-row>
+    <ion-col size-lg="">
+      <ion-item>
+        <ion-label>Lengua origen</ion-label>
+        <ion-select value="lo"  formControlName="lenguaOrigen">
+          <ion-select-option *ngFor="let idioma of idiomas" value="{{idioma.id}}">{{idioma.nombre}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-col>
+    <ion-col size-lg="1" class="ion-hide-lg-down ">
+      <ion-row class="ion-justify-content-center ">
+        <ion-icon name="arrow-forward-outline" style="margin-top: 15px;"></ion-icon>
+      </ion-row>
+        
+    </ion-col>
+    <ion-col size-lg="">
+      <ion-item>
+        <ion-label>Lengua meta</ion-label>
+        <ion-select value="lm"  formControlName="lenguaMeta">
+          <ion-select-option *ngFor="let idioma of idiomas" value="{{idioma.id}}">{{idioma.nombre}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+
+   <!--Tercera fila traductor-->
+  <ion-row>
+    <ion-col size="12">
+      <ion-item>
+        <ion-label>Traductor</ion-label>
+        <ion-select value="trad" formControlName="trad">
+          <ion-select-option *ngFor="let traductor of traductores" value="{{traductor.id}}">{{traductor.nombre}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+  
+  <!--Cuarta fila, fecha de entrega-->
+  
+
+  </form>
+  </ion-card-content>
 </ion-content>
+
 <ion-footer>
   <ion-toolbar >
     <ion-tabs>
