--- a/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.scss
+++ b/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.scss
@@ -11,6 +11,9 @@ ion-badge {
     margin-right: 20px;
     font-size: 0.7rem;
 }
+ion-datetime {
+  background-color: white;
+}
 /*
 ion-col{
     margin-left: 5%;
