--- a/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.html
+++ b/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.html
@@ -73,12 +73,41 @@
       <ion-item (click)="mostrarCalendario = !mostrarCalendario">
         <ion-label>Fecha de entrega</ion-label>
         <ion-text slot="end">{{fechaMostrada}}</ion-text>
+        <ion-icon name="calendar-outline" class="ion-hide-lg-down"></ion-icon>
       </ion-item>
+      
       <ion-datetime *ngIf="mostrarCalendario" presentation="date" 
       #datetime (ionChange)="elegirFecha(datetime.value)" showDefaultButtons="true"
       (ionCancel)="mostrarCalendario = false"></ion-datetime>
     </ion-col>
   </ion-row>
+
+  <!--Quinta fila, descripcion-->
+  <ion-row>
+    <ion-col size="12">
+      <ion-item>
+        <ion-label position="floating">Descripción</ion-label>
+        <ion-input type="text" formControlName="descrProyecto" spellcheck="true" placeholder="Ej. Tercer capítulo de la cuarta temporada de la serie Bull"></ion-input>
+        <ng-container *ngIf="newProjectForm.controls.descrProyecto.errors != undefined">
+          <div class="errorEnValidacion" *ngIf="newProjectForm.controls.descrProyecto.errors.required">Campo obligatorio
+          </div>
+        </ng-container>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+
+  <!--Segunda parte del formulario-->
+  <ion-row>
+    <ion-col size="12" class="ion-align-items-center ion-padding-top">
+      <ion-badge>2</ion-badge>
+      <ion-label>Documentos</ion-label>
+    </ion-col>
+    <ion-col size="12">
+      <ion-item>
+        <ion-input type="file"></ion-input>
+      </ion-item>
+    </ion-col>
+</ion-row>
 
   </form>
   </ion-card-content>
