--- a/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.html
+++ b/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.html
@@ -104,8 +104,12 @@
     </ion-col>
     <ion-col size="12">
       <ion-item>
-        <ion-input type="file"></ion-input>
+        <ion-input type="file"id="doc" (ionChange)="mostrarVistaPrevia();"></ion-input>
+        <ion-button (click)="saveAs();">Elegir archivo</ion-button>
       </ion-item>
+    </ion-col>
+    <ion-col size="12">
+      <embed id="vistaPrevia" src=""  width="100%" height="375" type="application/pdf">
     </ion-col>
 </ion-row>
 
