--- a/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.html
+++ b/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.html
@@ -105,11 +105,11 @@
     <ion-col size="12">
       <ion-item>
         <ion-input type="file"id="doc" (ionChange)="mostrarVistaPrevia();"></ion-input>
-        <ion-button (click)="saveAs();">Elegir archivo</ion-button>
+      <!-- <ion-button (click)="mostrarVistaPrevia();">Elegir guion</ion-button>-->
       </ion-item>
     </ion-col>
     <ion-col size="12">
-      <embed id="vistaPrevia" src=""  width="100%" height="375" type="application/pdf">
+      <embed id="vistaPrevia" src=""  width="100%" height="450" type="application/pdf">
     </ion-col>
 </ion-row>
 
