--- a/scrip-trad/src/app/pages/listado-proyectos-traductor/listado-proyectos-traductor.page.scss
+++ b/scrip-trad/src/app/pages/listado-proyectos-traductor/listado-proyectos-traductor.page.scss
@@ -4,3 +4,14 @@ ion-avatar {
     margin: 10px;
     
 }
+
+ion-thumbnail {
+    max-width: 40px;
+    max-height: 25px;
+}
+
+.imgIdiomas {
+    display: block; 
+    border: none;
+    border-style: none !important;
+}
