routing editor con param ok

--- a/scrip-trad/src/app/pages/editor/editor.page.html
+++ b/scrip-trad/src/app/pages/editor/editor.page.html
@@ -9,7 +9,7 @@
 </ion-header>
 
 <ion-content>
-
+El id del proyecto seleccionado es  {{idPr}}
 </ion-content>
 
 <ion-footer>
@@ -17,9 +17,9 @@
     <ion-tabs>
   
       <ion-tab-bar slot="bottom" class="ion-justify-content-around">
-        <ion-tab-button tab="listado-proyectos-gestor" (click)="irEditor();">
+       <!-- <ion-tab-button tab="listado-proyectos-gestor" (click)="irEditor();">
           <ion-icon name="pencil-outline"></ion-icon>
-        </ion-tab-button>
+        </ion-tab-button>-->
     
         <ion-tab-button tab="tab2" (click)="irInicioTraductor();">
           <ion-icon name="home-outline"></ion-icon>
