--- a/scrip-trad/src/app/pages/editor/editor.page.html
+++ b/scrip-trad/src/app/pages/editor/editor.page.html
@@ -3,34 +3,133 @@
     <ion-title>Editor traducción</ion-title>
     <!--Imagen de usuario logueado-->
     <ion-avatar slot="end" id="usu" button (click)="mostrarMenu()">
-      <img src="{{ usuarioAutenticado != null && usuarioAutenticado.img != null ? 'data:image/png;base64,' + usuarioAutenticado.img : 'assets/img/genericUser.jpg'}}" alt="Imagen usuario">
+      <img
+        src="{{ usuarioAutenticado != null && usuarioAutenticado.img != null ? 'data:image/png;base64,' + usuarioAutenticado.img : 'assets/img/genericUser.jpg'}}"
+        alt="Imagen usuario">
     </ion-avatar>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-El id del proyecto seleccionado es  {{idPr}}
+<ion-content [fullscreen]="true">
+  <!--El id del proyecto seleccionado es  {{idPr}} -->
+  <!-- Tarjeta para contener todos los items -->
+  <ion-card class="border">
+    <ion-card-content>
+      <form>
+        <!--Primera fila para character matching y boton generar trad-->
+        <ion-row>
+          <!--Col para character-->
+          <ion-col size-lg="8">
+            <ion-row>
+              <ion-col size="10">
+                <ion-item>
+                  <ion-label position="stacked">Charcter matching</ion-label>
+                  <ion-input type="text" placeholder="Ej. Adam"></ion-input>
+                </ion-item>
+              </ion-col>
+              <ion-col size="1" class="ion-align-self-center ion-text-center">
+                <ion-icon name="color-wand-outline"></ion-icon>
+              </ion-col>
+            </ion-row>
+          </ion-col>
+          <!--Col para boton-->
+          <ion-col size-lg="4" class="ion-align-self-center">
+            <ion-button expand="block" color="tertiary"><span class="ion-hide-lg-down">Generar traducción</span>
+              <ion-icon name="cloud-download-outline" class="ion-padding-horizontal"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+        <!--Segunda fila para segmento TO-->
+          <!-- flecha nav, tabla, flecha nav-->
+          <ion-row>
+            <ion-col size="1" class="ion-align-self-start ion-text-left"><ion-icon name="chevron-back-outline"></ion-icon></ion-col>
+            <ion-col size="10">
+              <table style="width: 100%;">
+                <tr>
+                  <th size="11">TO</th>
+                  <th size="1">Character</th>
+                </tr>
+
+                <tr>
+                  <!-- Espacio para traduccion-->
+                  <td size="11">
+                      <ion-textarea placeholder="Segmento que se va a traducir"></ion-textarea>
+                  </td>
+                  <td size="1" class="ion-text-center">
+                    <!-- Add, delete-->
+                    <ion-icon name="add-outline"></ion-icon> <!-- style="color: rgb(28, 124, 28);"  -->
+                    <ion-icon name="close-outline" style="color: rgb(148, 20, 20);"></ion-icon>
+                  </td>
+                </tr>
+              </table>
+            </ion-col>
+            <ion-col size="1" class="ion-align-self-start ion-text-end"><ion-icon name="chevron-forward-outline"></ion-icon></ion-col>
+          </ion-row>
+        <ion-item-divider></ion-item-divider>
+        <!-- Tercera fila TM, traduccion-->
+        <ion-row>
+          <!-- Titulo, cabecera-->
+          <ion-col size="12">
+            <ion-row>
+              <ion-col size="9" class="ion-text-center">
+                <span style="font-weight: bold;">TM</span>
+              </ion-col>
+              <ion-col size="3"  class="ion-text-center">
+                <ion-icon name="language-outline"></ion-icon>
+              </ion-col>
+            </ion-row>
+            
+          </ion-col>
+          <!-- Espacio para traduccion-->
+          <ion-col size="12">
+            <ion-textarea placeholder="Aqui va la traduccion"></ion-textarea>
+          </ion-col>
+          <!-- Administracion de personajes-->
+          <ion-col size="12">
+            <!-- Fila pra 1 columna select, 2 columna iconos, 3 columna btn aceptar-->
+            <ion-row>
+              <!-- Select -->
+              <ion-col size="7">
+                <ion-item>
+                  <ion-label>Characters</ion-label>
+                  <ion-select value="rol">
+                    <ion-select-option value="1" selcted>Personaje 1</ion-select-option>
+                    <ion-select-option value="2">Personaje 2</ion-select-option>
+                  </ion-select>
+                </ion-item>
+              </ion-col>
+              <!-- Iconos -->
+              <ion-col size="2" class="ion-align-self-center">
+                <ion-icon name="add-circle"></ion-icon>
+                <ion-icon name="build"></ion-icon>
+              </ion-col>
+              <!-- Btn -->
+              <ion-col size="3" class="ion-justify-content-end">
+                <ion-button color="tertiary">OK</ion-button>
+              </ion-col>
+            </ion-row>
+          </ion-col>
+        </ion-row>
+      </form>
+
+    </ion-card-content>
+  </ion-card>
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar >
+  <ion-toolbar>
     <ion-tabs>
-  
+
       <ion-tab-bar slot="bottom" class="ion-justify-content-around">
-       <!-- <ion-tab-button tab="listado-proyectos-gestor" (click)="irEditor();">
+        <!-- <ion-tab-button tab="listado-proyectos-gestor" (click)="irEditor();">
           <ion-icon name="pencil-outline"></ion-icon>
         </ion-tab-button>-->
-    
+
         <ion-tab-button tab="tab2" (click)="irInicioTraductor();">
           <ion-icon name="home-outline"></ion-icon>
         </ion-tab-button>
-    <!--
-        <ion-tab-button tab="tab3">
-          <ion-icon name="menu-outline"></ion-icon>
-          
-        </ion-tab-button>-->
       </ion-tab-bar>
-    
+
     </ion-tabs>
   </ion-toolbar>
 
