--- a/scrip-trad/src/app/pages/editor/editor.page.scss
+++ b/scrip-trad/src/app/pages/editor/editor.page.scss
@@ -3,3 +3,11 @@ ion-avatar {
     max-height: 40px;
     margin-right: 10px;
 }
+
+ion-icon {
+    font-size: 24px;
+}
+
+.borde {
+    box-shadow: rgb(0 0 0 / 20%) 0px 3px 1px -2px, rgb(0 0 0 / 14%) 0px 2px 2px 0px, rgb(0 0 0 / 12%) 0px 1px 5px 0px;;
+}
