--- a/scrip-trad/src/app/pages/registro/registro.page.html
+++ b/scrip-trad/src/app/pages/registro/registro.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      <ion-button fill="clear" (click)="volverLogin()"><ion-icon name="arrow-back-outline" style="padding-right: 5px; color: black;"></ion-icon></ion-button>
+      <ion-icon button (click)="volverLogin()" name="arrow-back-outline" style="padding-right: 5px; color: black;"></ion-icon>
       Scriptrad</ion-title>
   </ion-toolbar>
 </ion-header>
