--- a/scrip-trad/src/app/pages/listado-proyectos-traductor/listado-proyectos-traductor.page.html
+++ b/scrip-trad/src/app/pages/listado-proyectos-traductor/listado-proyectos-traductor.page.html
@@ -22,8 +22,8 @@
   </ion-toolbar>
 
 
-  <div *ngIf="totalProyectos == 0 && selected == 1">   
-    <p>No hay traducciones urgentes pendientes, ¡buen trabajo!</p>
+  <div *ngIf="totalProyectos == 0 && selected == 1" class="ion-text-center ion-padding-horizontal ion-padding-top">   
+    <h2>No hay traducciones urgentes pendientes, ¡buen trabajo!</h2>
     <p id="quote"></p>
   </div>
 
