--- a/scrip-trad/src/app/pages/editor/editor.page.scss
+++ b/scrip-trad/src/app/pages/editor/editor.page.scss
@@ -6,8 +6,17 @@ ion-avatar {
 
 ion-icon {
     font-size: 24px;
+    cursor: pointer;
 }
 
-.borde {
-    box-shadow: rgb(0 0 0 / 20%) 0px 3px 1px -2px, rgb(0 0 0 / 14%) 0px 2px 2px 0px, rgb(0 0 0 / 12%) 0px 1px 5px 0px;;
+ion-progress-bar {
+    --background: #c1f3a4;
+    --progress-background: #1c8308;
+    --buffer-background: var(--background);
+    display: block;
+    position: relative;
+    width: 100%;
+    contain: strict;
+    direction: ltr;
+    overflow: hidden;
 }
